--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="mainstyle.css">
 </head>
 <body>
     <header>
@@ -18,10 +19,13 @@
         </ul>
     </nav>
     <main>
+        <section class="sectionstyle">
+            <img src="3.JPG" alt="">
+        </section>
         <section>
             <h2>what is Git</h2>
             <p>Git is a version control system that helps</p>
-            <button></button>
+            <button>click to read more</button>
         </section>
     </main>
     <footer><p>
