--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         </ul>
     </nav>
     <main>
-        <section class="sectionstyle">
-            <img src="3.JPG" alt="">
+        <section>
+            <img class="sectionstyle" src="3.JPG" alt="">
         </section>
         <section>
             <h2>what is Git</h2>
-            <p>Git is a version control system that helps</p>
+            <p>Git is a version control system that helps developers track changes</p>
             <button>click to read more</button>
         </section>
     </main>
