--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </section>
     </main>
     <footer><p>
-        &copy;2025 by Kyosab Micheal 25/BSE/Bu/R/0017. all rights reserved
+        &copy;2025 by Kyosaba Micheal 25/BSE/Bu/R/0017. all rights reserved
     </p></footer>
 </body>
 </html>
